--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase.json
+database.rules.json
+storage.rules
+.firebase/hosting.YnVpbGQ.cache
+.env
+.firebaserc
+.env
+.env
+.env
