--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-landing-page": "^2.0.2",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "rebass": "^4.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
